membuat isi html

--- a/tailwindCSS/src/index.html
+++ b/tailwindCSS/src/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>tailwindCSS</title>
-  <link href="../dist/output.css" rel="stylesheet" />
-</head>
+  <title>Perkenalan Diri</title>
+<link href="../dist/output.css" rel="stylesheet" />
 <body>
-
+    <main>
+        <h1>Halo, nama saya Dias mayri</h1>
+        <p>Ini adalah website sederhana menggunakan Tailwind CSS.</p>
+        <p>Terima kasih telah berkunjung ke website ini.</p>
+    </main>
 </body>
 </html>
