--- a/tailwindCSS/src/index.html
+++ b/tailwindCSS/src/index.html
@@ -7,9 +7,9 @@
 <link href="../dist/output.css" rel="stylesheet" />
 <body>
     <main>
-        <h1>Halo, nama saya Dias mayri</h1>
-        <p>Ini adalah website sederhana menggunakan Tailwind CSS.</p>
-        <p>Terima kasih telah berkunjung ke website ini.</p>
+        <h1 class="text-2xl font-semibold text-gray-800 mb-4">Halo, nama saya Dias mayri</h1>
+        <p class="text-gray-600 mb-6">Ini adalah website sederhana menggunakan Tailwind CSS.</p>
+        <p class="text-gray-700">Terima kasih telah berkunjung ke website ini.</p>
     </main>
 </body>
 </html>
