--- a/tailwindCSS/src/index.html
+++ b/tailwindCSS/src/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perkenalan Diri</title>
 <link href="../dist/output.css" rel="stylesheet" />
-<body>
-    <main>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center px-4"> 
+    <main class="bg-white shadow-md rounded-lg p-8 max-w-sm w-full text-center">
         <h1 class="text-2xl font-semibold text-gray-800 mb-4">Halo, nama saya Dias mayri</h1>
         <p class="text-gray-600 mb-6">Ini adalah website sederhana menggunakan Tailwind CSS.</p>
         <p class="text-gray-700">Terima kasih telah berkunjung ke website ini.</p>
