--- a/vanillaCSS/index.html
+++ b/vanillaCSS/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vanillaCSS</title>
+     <style>
+    /* Reset dan base */
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      background-color: #f3f4f6; /* bg-gray-100 */
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 1rem; /* px-4 */
+      font-family: system-ui, sans-serif;
+      color: #374151; /* text-gray-700 */
+    }
+    main {
+      background: #fff; /* bg-white */
+      box-shadow: 0 1px 3px rgb(0 0 0 / 0.1), 0 1px 2px rgb(0 0 0 / 0.06); /* shadow-md */
+      border-radius: 0.5rem; /* rounded-lg */
+      padding: 2rem; /* p-8 */
+      max-width: 24rem; /* max-w-sm */
+      width: 100%;
+      text-align: center;
+    }
+    h1 {
+      font-weight: 600; /* font-semibold */
+      font-size: 1.5rem; /* text-2xl */
+      color: #1f2937; /* text-gray-800 */
+      margin-bottom: 1rem; /* mb-4 */
+    }
+    p {
+      margin: 0 0 1.5rem 0; /* mb-6 untuk 1 paragraf, mb-4 untuk lainnya */
+      color: #4b5563; /* text-gray-600 */
+    }
+    p:last-child {
+      margin-bottom: 0;
+      color: #374151; /* text-gray-700 */
+    }
+  </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Hai, saya Dias Mayri</h1>
+        <p>Ini adalah website sederhana menggunakan Tailwind CSS.</p>
+        <p>Terima kasih telah berkunjung ke website ini.</p>
+    </main>
 </body>
 </html>
